force-app/main/default/objects/Expense__c/fields/Paid_By_Splitwise_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_By_Splitwise_ID__c</fullName>
    <externalId>true</externalId>
    <label>Paid By Splitwise ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>