force-app/main/default/objects/Expense__c/fields/Shared_with__c.field-meta.xml
<CustomField>
    <fullName>Shared_with__c</fullName>
    <label>Shared with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>