force-app/main/default/objects/Expense__c/fields/Splitwise_ID__c.field-meta.xml
<CustomField>
    <fullName>Splitwise_ID__c</fullName>
    <externalId>true</externalId>
    <label>Splitwise ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>