force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trip__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>